[package]
name = "smolhttp"
version = "1.0.0"
authors = ["p00s <pin9sb@gmail.com>", "FallAngel <fallangel@protonmail.com>"]
license = "MIT/Apache-2.0"
description = "smolhttp is a fork of the original minihttp and aims to keep simple and lightweight"
include = ["src/*.rs", "Cargo.toml"]
publish = true
homepage = "https://github.com/FallAngel1337/smolhttp"
repository = "https://github.com/FallAngel1337/smolhttp"

[dependencies]
miniurl = "0.1.3"
minihttpse = "0.1.6"
native-tls = "0.2"
